Modernize string formatting and others