@@ -10,6 +10,6 @@ public class Op1NNN extends OpPNNN {
     }
 
     @Override public String toString() {
-        return String.format("JP 0x%03X", address());
+        return "JP 0x%03X".formatted(address());
     }
 }
