@@ -9,6 +9,6 @@ public class Op5XY0 extends OpPXYQ {
     }
 
     @Override public String toString() {
-        return String.format("SE V%X, V%X", vx(), vy());
+        return "SE V%X, V%X".formatted(vx(), vy());
     }
 }
