@@ -9,6 +9,6 @@ public class Op8XY0 extends OpPXYQ {
     }
 
     @Override public String toString() {
-        return String.format("LD V%X, V%X", vx(), vy());
+        return "LD V%X, V%X".formatted(vx(), vy());
     }
 }
