@@ -26,6 +26,6 @@ public abstract class OpPXQR extends Opcode {
     }
 
     @Override public String encode() {
-        return String.format("%1X%1X%1X%1X", p, vx(), q, r);
+        return "%1X%1X%1X%1X".formatted(p, vx(), q, r);
     }
 }
