@@ -16,6 +16,6 @@ public sealed interface Word permits Word.Op, Word.Data {
 
     record Data(short value) implements Word {
         public short getValue() { return value; }
-        public String encode() { return String.format("%04X", getValue()); }
+        public String encode() { return "%04X".formatted(getValue()); }
     }
 }
